Fixed the z-index issue and the slider rendering outside page issue

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -564,7 +564,6 @@ body {
 
 /*  Prevents Flickering  */
 	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
 }
 
